--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "engines": {
     "node": ">=10"
   },
-  "homepage": "http://liuguanhua.github.io/react-share-components",
+  "homepage": "https://liuguanhua.github.io/react-share-components",
   "repository": "https://github.com/liuguanhua/react-share-components",
   "scripts": {
     "start": "yarn clean && tsdx watch",
@@ -18,7 +18,9 @@
     "clean": "rimraf dist",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "predeploy": "yarn build && cd example && yarn build",
+    "deploy": "gh-pages -d ./example/dist"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "gh-pages": "^3.1.0",
     "husky": "^4.2.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -55,5 +58,10 @@
     "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "rollup-plugin-postcss": "^3.1.2"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "Android >= 4.4",
+    "iOS >= 9"
+  ]
 }
