--- a/package.json
+++ b/package.json
@@ -73,9 +73,9 @@
     "@rollup/plugin-image": "^2.0.5",
     "@types/qrcode.react": "^1.0.1",
     "autoprefixer": "^9.8.4",
-    "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
-    "rollup-plugin-postcss": "^3.1.2"
+    "rollup-plugin-postcss": "^3.1.2",
+    "sass": "^1.26.9"
   },
   "browserslist": [
     "last 2 versions",
